# neuralNetworkFromScratchCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mnistDataReader.cpp
matrix/: CMakeLists.txt  matrix.h
matrix/unitTest/: .gitignore  CMakeLists.txt  matrixTest  matrixTest.cpp
mnistDataReader/: CMakeLists.txt  mnistDataReader.cpp  mnistDataReader.h
